# cc-builder

./: .gitignore  README.md  install.sh  not-cloud-init.ipynb  not-cloud-init.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package-conda.yml
cc_builder/: __init__.py  cli.py  generator.py  logger.py
cc_builder/modules/: apt.py  hostname.py  snap.py  ssh.py  user.py
not_cloud_init/: __init__.py  cli.py  custom_types.py  generator.py  logger.py
not_cloud_init/modules/: apt.py  hostname.py  snap.py  ssh.py  user.py
snap/: snapcraft.yaml
src/: cli.py  custom_types.py  generator.py  logger.py
src/modules/: apt.py  hostname.py  snap.py  ssh.py  user.py
