# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel", "mypy; extra == 'type_check'"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
follow_imports = "silent"
warn_unused_ignores = "true"
warn_redundant_casts = "true"
exclude=[]

[[tool.mypy.overrides]]
module = [
  "ibm_boto3.*",
  "ibm_botocore.*",
  "ibm_vpc.*",
  "ibm_cloud_sdk_core.*",
  "ibm_platform_services.*",
  "image_naming.*",
]
ignore_missing_imports = true

