# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel", "mypy; extra == 'type_check'"]
build-backend = "setuptools.build_meta"

[project]
name = "not-cloud-init"
version = "0.9.3"
description = ""
authors = [
    { name="a-dubs", email="thee_dubski@guy.com" }
]
readme = "README.md"
license = { file="LICENSE" }  # TODO actually add a license to this bad boy
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click>=8",
  "PyYAML>=6",
  "rich_click"
]

[project.scripts]
not-cloud-init = "not_cloud_init.cli:main"
nci = "not_cloud_init.cli:main"

[tool.black]
line-length = 120
target-version = ['py36']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
follow_imports = "silent"
warn_unused_ignores = "true"
warn_redundant_casts = "true"
exclude=[]
