# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel", "mypy; extra == 'type_check'"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-builder"
version = "1.0.0"
description = "An interactive command line tool for generating cloud-config files for cloud-init"
authors = [
    { name="a-dubs", email="alecwarren19@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click>=8",
  "PyYAML>=6",
  "rich_click"
]

[project.scripts]
cc-builder = "cc_builder.cli:main"
ccb = "cc_builder.cli:main"

[tool.black]
line-length = 120
target-version = ['py36']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
follow_imports = "silent"
warn_unused_ignores = "true"
warn_redundant_casts = "true"
exclude=[]

[tool.setuptools.packages.find]
exclude = ["snap"]
